# turtlebot3

./: README.md
custom_path/: CMakeLists.txt  package.xml
custom_path/msg/: CustomPath.msg
my_launch/: CMakeLists.txt  costmap_plugin_description.xml  package.xml  plugin_description.xml
my_launch/costmap_plugin/include/: MyCostmapPlugin.hpp
my_launch/costmap_plugin/src/: MyCostmapPlugin.cpp
my_launch/msg/: CustomPath.msg
my_launch/params/: my_robot.yaml
my_launch/rviz/: tb3_navigation2.rviz
my_launch/src/: compare.cpp  controller_monitor.cpp  create_path.cpp  demo.cpp  init_pos_pub.cpp  main_controller.cpp  robotController.cpp  turtlebot3_controller.cpp  work_area_creator.cpp
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/config/: params.yaml
my_robot_bringup/launch/: demo.launch.py  demo.launch.xml  demo.launch.yaml  navigation2.launch.py  params.launch.py
my_robot_bringup/param/: burger.yaml
my_robot_bringup/src/: path_publisher.py
my_robot_controller/: package.xml  setup.py
my_robot_controller/my_robot_controller/: controller.py  gui.py  test_GUI.py  testpoint.py
